--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,23 @@
   <title>ChatNodo — Corregido</title>
   <style>
     :root{
-  --bg: #e9edef; --panel: #fff; --accent:#25D366; --muted:#8a9398; 
-  --me:#DCF8C6; --them:#ffffff; --header:#075E54; --text:#111827;
-  --dark-bg: #0f1720; --dark-panel:#111827; --dark-text:#e6eef3;
+  --bg: #e9edef; 
+  --panel: #fff; 
+  --accent:#1e90ff; 
+  --muted:#8a9398; 
+
+  /* ✅ GLOBOS AZULES */
+  --me:#1e90ff;        /* Azul fuerte (tú) */
+  --them:#dbeafe;      /* Azul claro (otros) */
+
+  --header:#1e90ff; 
+  --text:#111827;
+
+  --dark-bg: #0f1720; 
+  --dark-panel:#111827; 
+  --dark-text:#e6eef3;
 }
+
 
     *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,Segoe UI,Arial,Helvetica,sans-serif}
     html,body,#root{height:100%;}
@@ -95,12 +108,15 @@
 /* Mensajes */
 .msg.me {
   margin-left: auto;
-  background: var(--msg-me);
+  background: var(--me);   /* Azul fuerte */
+  color: white;
 }
 
 .msg.other {
-  background: var(--msg-other);
+  background: var(--them); /* Azul claro */
+  color: #1e293b;
 }
+
 
 /* Modo oscuro */
 body.dark .messages {
